Fix link ui style for dark mode

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -16,7 +16,7 @@
     @apply mb-4;
   }
   .markdown a {
-    @apply text-blue-400 hover:underline;
+    @apply text-blue-500 dark:text-blue-400 hover:underline;
   }
   .markdown blockquote {
     @apply border-l-4 border-gray-300 pl-4 italic my-4;
